--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,5 @@
 /src/dcl-landscapes/*
 .dclignore
 Dockerfile
-LICENSE
-package.json
 package-lock.json
-README.md
-scene.json
-tsconfig.json
+export
